# rsfilecrypt

./: Cargo.toml  test  test.enc  test.enc.mac  test.enc.nonce
src/: encoding.rs  encryption.rs  inout.rs  main.rs  verification.rs
src/encryption/: aes256.rs  mod.rs  salt.rs
src/io/: encoding.rs  errors.rs  interface.rs  mac.rs  mod.rs
src/structs/: arguments.rs  encrypted.rs  mod.rs
