[package]
name = "rsfilecrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = "0.10.3"
argon2 = { version = "0.5.3", features = ["simple"] }
rand_core = { version = "0.6.4", features = ["std"] }
